--- a/templates/index.html
+++ b/templates/index.html
@@ -1,39 +1,39 @@
 {% extends "template.html" %}
 {% block conteudo %}
-    <h1>Lista de Compras</h1>
-    <!-- Formulário para adicionar de produtos -->
+<main class="d-flex flex-column m-auto">
+    <!-- título -->
+    <h1 class="mb-3">{{ titulo }}</h1>
+    <!-- formulário -->
     <form action="{{ componente.rota_form }}" method="post">
-        <div class="row">
-            <div class="col-auto">
-                <input type="text" class="form-control" name="produto" value="{{ componente.input_produto }}" disabled="" placeholder="Produto">
+        <div class="d-sm-flex gap-3">
+            <div class="py-2">
+                <input type="text" class="form-control" id="produto" name="produto" value="{{ componente.input_produto }}" {{componente.disabled_componente}} placeholder="produto">
             </div>
-            <div class="col-auto">
-                <input type="number" class="form-control" name="quantidade" value="{{ componente.input_quantidade }}" placeholder="Quantidade">
-            </div>
-            <div class="col-auto">
-                <button type="submit" class="btn btn-success">{{ componente.btn_form }}</button>
+            <div class="py-2">
+                <input type="text" class="form-control" id="quantidade" name="quantidade" value="{{ componente.input_quantidade }}" placeholder="quantidade">
             </div>
         </div>
+        <button type="submit" class="mt-3 btn btn-primary float-end">{{ componente.btn_form }}</button>
     </form>
-    <!-- Tabela de produtos -->
-    <table>
-        <thead class="thead-dark">
+    <!-- tabela -->
+    <table class="table table-striped mt-5 mb-3">
+        <thead>
             <tr>
-                <th>Produto</th>
-                <th>Quantidade</th>
-                <th>Editar</th>
-                <th>Excluir</th>
+                <th class="text-left">Produto</th>
+                <th class="text-center">Quantidade</th>
+                <th class="text-center">Editar</th>
+                <th class="text-center">Excluir</th>
             </tr>
         </thead>
         <tbody>
             {% for produto, quantidade in lista.items() %}
             <tr>
-                <td>{{ produto }}</td>
-                <td>{{ quantidade }}</td>
-                <td><a href="/editar?produto={{ produto }}"><button type="button" class="btn btn-primary">✎</button></a></td>
-                <td><a href="/excluir?produto={{ produto }}"><button type="button" class="btn btn-danger">╳</button></a></td>
-            </tr>
+                <td class="w-coluna-produto">{{ produto }}</td>
+                <td class="w-coluna-quantidade text-center">{{ quantidade }}</td>
+                <td class="text-center"><a href="/editar?produto={{ produto }}"><button type="button" class="btn btn-primary">✎</button></a></td>
+                <td class="text-center"><a href="/excluir?produto={{ produto }}"><button type="button" class="btn btn-danger">╳</button></a></td>
             {% endfor %}
         </tbody>
     </table>
+</main>
 {% endblock %}
