--- a/templates/template.html
+++ b/templates/template.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en" data-bs-theme="dark">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista de Compras</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='bootstrap.css') }}">
+    <title>{{ titulo }}</title>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
-<body>
-    <div class="container-fluid" style="background-color: #eee;">
-        {% block conteudo %}<!-- conteúdo -->{% endblock %}
-    </div>
+
+<body class="d-flex align-items-center">
+    {% block conteudo %}<!-- conteúdo -->{% endblock %}
 </body>
+
 </html>
